# rossi

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
crates/eventb-lsp/: Cargo.toml  README.md
crates/eventb-lsp/benchmark_support/: mod.rs
crates/eventb-lsp/src/: analysis.rs  benchmark_metrics.rs  code_actions.rs  completion.rs  component_loader.rs  component_util.rs  config.rs  cross_references.rs  definition.rs  dependency_benchmark.rs  diagnostics.rs  document.rs  folding.rs  formatting.rs  formula_walk.rs  hover.rs  identifier_utils.rs  lib.rs  main.rs  position.rs  references.rs  rename.rs  resolved_environment.rs  selection_range.rs  semantic_tokens.rs  server.rs  signature_help.rs  symbols.rs  text_utils.rs  workspace.rs
crates/eventb-lsp/tests/: code_actions_test.rs  debounce_test.rs  dependency_environment_allocations.rs  examples_lsp_test.rs  folding_test.rs  multi_file_test.rs  operator_table_test.rs  recovery_resilience_test.rs  semantic_tokens_test.rs  workspace_symbols_test.rs
crates/eventb-lsp/tests/common/: mod.rs
crates/rossi/: Cargo.toml  README.md
crates/rossi-build/: Cargo.toml  README.md
crates/rossi-build/examples/: check_oftype.rs  corpus_smoke.rs  diff_one.rs  dump_bcc.rs
crates/rossi-build/src/: ast_util.rs  checked_predicate.rs  duplicates.rs  enrich.rs  error.rs  handles.rs  infer.rs  lib.rs  lint.rs  normalize.rs  project.rs  proofs.rs  repack.rs  rodin_ids.rs  rules.rs  sc_model.rs  sc_view.rs  type_env.rs  types.rs  wellformed.rs  xml_out.rs
crates/rossi-build/src/sc/: context.rs  context_record.rs  identifier_walker.rs  machine_record.rs  mod.rs
crates/rossi-build/src/sc/machine/: events.rs  mod.rs
crates/rossi-build/src/wd/: builder.rs  computer.rs  improve.rs  mod.rs  normal.rs  render.rs
crates/rossi-build/tests/: animate_corpus.rs  checked_internal_names.rs  concrete_vs_abstract_variables.rs  context_axiom_lambda_union_bidirectional.rs  context_carrier_sets.rs  context_constants_and_axioms.rs  corpus.rs  dependency_inaccuracy_propagates.rs  disappeared_variable.rs  duplicate_component_names.rs  duplicate_names_sc.rs  event_convergence_accuracy.rs  event_extended_inherits_accuracy.rs  event_inherited_rendering.rs  event_missing_refines_target.rs  event_param_inferred_from_implication.rs  event_param_inferred_from_maplet_equality.rs  event_param_inferred_from_set_op_equality.rs  event_witness_accuracy.rs  extended_event_label_conflicts.rs  file_accurate_with_untyped_variables.rs  golden_byte_exact.rs  import_corpus.rs  initialisation_repair.rs  initialisation_witness.rs  invalid_arithmetic_accuracy.rs  lint_examples.rs  machine_decomposition_stub.rs  machine_events.rs  machine_extended_events.rs  machine_implicit_refines.rs  machine_inherited_param_scope.rs  machine_invariants_variables.rs  machine_refines.rs  machine_sees_diamond.rs  machine_variant.rs  operator_compat_oracle.rs  proof_oracle_diff.rs  properties.rs  rodin_corpus.rs  (+5 more)
crates/rossi-build/tests/common/: mod.rs
crates/rossi-cli/: Cargo.toml  README.md
crates/rossi-cli/src/: main.rs
crates/rossi-cli/src/commands/: build.rs  completions.rs  eventb_io.rs  export.rs  fmt.rs  gen_grammars.rs  import.rs  print.rs  sarif.rs  validate.rs
crates/rossi-cli/tests/: cli_test.rs  gen_grammars_test.rs
crates/rossi-lsp/: Cargo.toml  README.md
crates/rossi-lsp/src/: analysis.rs  code_actions.rs  completion.rs  component_loader.rs  component_util.rs  config.rs  cross_references.rs  definition.rs  document.rs  document_links.rs  folding.rs  formatting.rs  formula_walk.rs  hover.rs  identifier_utils.rs  lib.rs  main.rs  position.rs  prob.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  server.rs  signature_help.rs  symbol_scan.rs  symbols.rs  text_utils.rs  workspace.rs
crates/rossi-lsp/tests/: code_actions_test.rs  debounce_test.rs  examples_lsp_test.rs  folding_test.rs  multi_file_test.rs  operator_table_test.rs  recovery_resilience_test.rs  semantic_tokens_test.rs
crates/rossi-lsp/tests/common/: mod.rs
crates/rossi/examples/: bank_account_ctx.eventb  basic_ctx.eventb  basic_machine.eventb  counter.bum  counter_ctx.buc  counter_machine.eventb  lambda_example_ctx.eventb  library_ctx.eventb  library_machine.eventb  refinement_abstract.eventb  refinement_concrete.eventb  scheduler_ctx.eventb  scheduler_machine.eventb  sets_and_relations_ctx.eventb  simple_sets_ctx.eventb  traffic-light.txt  traffic_light_ctx.eventb
crates/rossi/src/: builtins.rs  comment_attach.rs  comments.rs  error.rs  grammar.pest  keywords.rs  lib.rs  names.rs  nesting.rs  op_info.rs  operators.rs  parser.rs  pretty.rs  selection.rs  snippets.rs  xml.rs
crates/rossi/src/ast/: action.rs  context.rs  event.rs  expression.rs  machine.rs  mod.rs  predicate.rs  visit_mut.rs  walk.rs
crates/rossi/tests/: action_span_test.rs  base_model_test.rs  comment_roundtrip_test.rs  doc_snippets_test.rs  edge_cases_test.rs  error_recovery_test.rs  expression_span_test.rs  full_models_test.rs  hyphenated_names_test.rs  identifier_validation_test.rs  multi_component_test.rs  nesting_limit_test.rs  operator_compatibility_test.rs  pretty_test.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  reserved_words_test.rs  rodin_models_test.rs  simple_predicate_test.rs  structural_separator_test.rs  variant_after_invariants_roundtrip.rs  working_examples_test.rs  xml_structure_test.rs  xml_test.rs
crates/rossi/tests/common/: mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: gen_grammars.rs  main.rs
crates/xtask/src/grammars/: emacs.rs  input_emacs.rs  operators_nvim.rs  operators_sublime.rs  snippets_emacs.rs  snippets_nvim.rs  snippets_vscode.rs  sublime.rs  textmate.rs  vim.rs  zed.rs
crates/xtask/tests/: gen_grammars_test.rs
editors/zed/: .gitignore  Cargo.toml  INSTALL.md  README.md  extension.toml
editors/zed/grammars/tree-sitter-eventb/: .gitignore  grammar.js  package-lock.json  package.json
editors/zed/languages/eventb/: config.toml  highlights.scm
editors/zed/snippets/: event-b.json
editors/zed/src/: lib.rs
(+105 files in other folders)
