[package]
name = "eventb-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Language Server Protocol implementation for Event-B"
license.workspace = true
repository.workspace = true
keywords = ["lsp", "language-server", "event-b", "formal-methods"]
categories = ["development-tools"]

[lib]
name = "eventb_lsp"
path = "src/lib.rs"

[[bin]]
name = "eventb-language-server"
path = "src/main.rs"

[dependencies]
# LSP framework
tower-lsp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# Text handling
ropey.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true

# Error handling and logging
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Parser. The `serde` feature provides `Serialize` for the operator table
# (`rossi::operators::OperatorRow`) the `rossi/operatorTable` request returns.
rossi = { workspace = true, features = ["serde"] }

# File system operations
walkdir.workspace = true

[dev-dependencies]
# `ServiceExt::ready` for driving the LspService in the rossi/operatorTable
# wire-level test. Pinned to the 0.4 line tower-lsp uses internally.
tower = { version = "0.5", features = ["util"] }
# `StreamExt::next` for reading server-to-client notifications (the
# `ClientSocket` stream) in the debounce wire-level test.
futures = "0.3"
