[package]
name = "rossi-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Static checker / builder for Event-B models in Rossi. Reads .buc/.bum and emits Rodin-compatible .bcc/.bcm."
keywords = ["event-b", "rodin", "static-checker", "formal-methods"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
rossi.workspace = true
thiserror.workspace = true
quick-xml.workspace = true
zip.workspace = true
walkdir.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[features]
default = []
serde = ["rossi/serde"]

[package.metadata.docs.rs]
# Document the `serde`-gated APIs on docs.rs.
all-features = true
