[package]
name = "rossi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for the Rossi Event-B toolchain"
license.workspace = true
repository.workspace = true
keywords = ["cli", "event-b", "formal-methods", "verification"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rossi"
path = "src/main.rs"

[dependencies]
rossi.workspace = true
rossi-build.workspace = true
rossi-lsp.workspace = true
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true
zip.workspace = true
