[package]
name = "rossi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for the Rossi Event-B toolchain"
license.workspace = true
repository.workspace = true
keywords = ["cli", "event-b", "formal-methods", "verification"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rossi"
path = "src/main.rs"
doc = false

[dependencies]
rossi.workspace = true
rossi-build.workspace = true
eventb-lsp.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
walkdir.workspace = true
zip.workspace = true
